# TrainyBackEnd

./: README.md  pyproject.toml
config/: settings.py  urls.py
core/authentication/: apps.py
core/authentication/migrations/: 0001_initial.py  0002_user_name.py  0003_user_photo_url.py
core/authentication/models/: user.py
core/authentication/serializers/: __init__.py  user.py
core/authentication/views/: __init__.py  user.py
core/management/commands/: migrate_db.py
core/trainy/: apps.py
